<resources>
    <string name="app_name">Campus Alerte</string>
    <string name="loading_alerts">Chargement …</string>
    <string name="alerts_list">Liste Alertes</string>
    <string name="alert_logo">Logo</string>

    <string name="campus_alerts">Liste des alertes en cours</string>
    <string name="alert_list">Alert List</string>

    <string name="type">Type</string>
    <string name="types">Type alerte</string>
    <string name="alert_type">Type: %s</string>

    <string name="date">Date</string>
    <string name="alert_date">Crée le: %s</string>

    <string name="address">Adresse</string>
    <string name="alert_address">Adresse: %s</string>

    <string name="longitude">Longitude</string>
    <string name="alert_long">Longitude: %s</string>

    <string name="latitude">Latitute</string>
    <string name="alert_lati">Latitute: %s</string>

    <string name="description">Description</string>

    <string name="alert_desc">Description: %s </string>


    <string name="alert_deleted">Alerte supprimée !</string>
    <string name="alert_restored">Alerte restaurée !</string>

    <!--alert_type_array -->
    <string-array name="alert_type_array">
        <item>Arbre à tailler</item>
        <item>Arbre à abattre</item>
        <item>Détritus</item>
        <item>Haie à tailler</item>
        <item>Mauvaise herbe</item>
        <item>Autre</item>
    </string-array>

</resources>
