<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="isLoading" type="boolean" />
        <variable name="alertViewModel" type="lahzouz.com.campusalert.viewmodel.AlertViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/loading_alert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_alerts"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="5dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:visibleGone="@{!isLoading}">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:contentDescription="@string/alert_logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/alert_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/alert_type"
                android:paddingBottom="5dp"
                android:text="@{alertViewModel.alert.getType()}"
                android:textAlignment="center"
                android:textSize="@dimen/alert_header1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alert_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/alert_date"
                android:text="@{String.format(@string/alert_date, alertViewModel.alert.getCreated_at())}"
                android:textSize="@dimen/alert_text" />

            <TextView
                android:id="@+id/alert_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/alert_description"
                android:text="@{alertViewModel.alert.getDescription()}"
                android:textSize="@dimen/alert_header2" />


        </LinearLayout>

    </FrameLayout>
</layout>