<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <data>

        <variable
            name="alert"
            type="lahzouz.com.campusalerte.service.model.Alert" />

        <variable
            name="callback"
            type="lahzouz.com.campusalerte.view.callback.AlertClickCallback " />

        <variable
            name="alertViewModel"
            type="lahzouz.com.campusalerte.viewmodel.AlertViewModel" />
    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="lahzouz.com.campusalerte.view.ui.AlertNewFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="5dp"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/alert_logo"
                android:src="@drawable/logo" />


            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alert_type_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@id/alert_type_spinner"
                    android:text="@string/type" />

                <Spinner
                    android:id="@+id/alert_type_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/alert_type_array"
                    android:prompt="@string/types" />

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textNoSuggestions"
                    android:text="@={alert.address}" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/desc_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="3"
                android:text="@={alert.description}" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:adjustViewBounds="false"
            android:onClick="@{() -> callback.onSaveClick(alert)}"
            android:src="@drawable/ic_save_white_48dp"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="10dp"
            app:fabSize="normal" />

    </android.support.design.widget.CoordinatorLayout>

</layout>