<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="isLoading" type="boolean" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context="lahzouz.com.campusalert.view.ui.AlertListFragment">

        <TextView
            android:id="@+id/loading_alerts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_alerts"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/campus_alerts"
                android:textAlignment="center"
                android:textSize="@dimen/alert_header1"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/alert_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/alert_list"
                app:layoutManager="LinearLayoutManager"/>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:adjustViewBounds="false"
            android:onClick="@{}"
            android:src="@android:drawable/ic_input_add"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal" />

    </android.support.design.widget.CoordinatorLayout>


</layout>